[package]
include = ["../.env.toml"]
name = "colgado-requests"
version = "0.2.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = "0.1.9"
open = "5.3.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.65"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
url = "2.5.2"
